--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -168,8 +168,9 @@ div.dataTables_wrapper div.dataTables_info {
     text-align: center;
     box-sizing: border-box;
     margin: 0 2px 0 0;
-    padding-top: 6px;
+    /*padding-top: 6px;*/
     color: #F3F3F3;
+    padding: 0.4em 0em;
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.next{
@@ -189,12 +190,14 @@ div.dataTables_wrapper div.dataTables_info {
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.next:active {
-    border: none;
+    box-shadow: none;
+    border: none !important;
     background: none !important;
     background-color: white !important;
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.previous:active {
-    border: none;
+    box-shadow: none;
+    border: none !important;
     background: none !important;
     background-color: white !important;
 }
@@ -219,6 +222,7 @@ div.dataTables_wrapper div.dataTables_info {
 
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+    color: white !important;
     border: white !important;
     background: none !important;
     background-color: #FF8031 !important;
@@ -228,6 +232,11 @@ div.dataTables_wrapper div.dataTables_info {
     border: none;
     background: none !important;
     background-color: #FF8031 !important;
+}
+
+.dataTables_paginate {
+    text-align: center !important;
+    width: 100% !important;
 }
 
 .ck-content {
